Fix scroll down arrow on mobile devices with searchbar visible

--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ p {
 .link {
     position: fixed;
     z-index: 0;
-    left: calc(-35vh - 50px - 1.5em);
+    left: calc(-25vh - 50px - 1.5em);
     /*top: 35vh;*/
     /*bottom: calc((100vh - 70vh + 25px) / 2);*/
     /*left: -20vw;*/
@@ -152,7 +152,7 @@ p {
     align-items: center;
     /*padding: 5px;*/
     text-decoration: none;
-    transform: rotate(-90deg) translate3d(calc(-35vh - 50px - (100vh - 35vh - 35vh - 100px - 1.5em)/2), 0, 0);
+    transform: rotate(-90deg) translate3d(calc(-25vh - 50px - (100vh - 25vh - 25vh - 100px - 1.5em)/2), 0, 0);
 }
 
 /*@media all and (max-height: 900px) {*/
@@ -199,7 +199,7 @@ p {
     position: relative;
     margin-left: -14px;
     margin-right: 30px;
-    width: 35vh;
+    width: 25vh;
     height: 2px;
     background: #555555;
     overflow: hidden;
@@ -211,7 +211,7 @@ p {
     display: block;
     position: absolute;
     left: 80px;
-    width: 35vh;
+    width: 25vh;
     height: 2px;
     background: white;
 }
